--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,13 +7,14 @@
   <meta property="og:site_name" content="Eric Eschelbach - Web Resume">
   <meta property="og:url" content="http://www.ericeschelbach.com/">
   <meta property="og:title" content="Eric Eschelbach - Web Resume">
-  <meta property="og:image" content="http://www.ericeschelbach.com/assets/screenshot.png">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1000">
-  <meta property="og:image:height" content="500">
-  <meta property="og:description" content="I have always been captivated by everything related to computers, and for the last two years I have been teaching myself web app development. I designed and built this site from scratch with a text editor and terminal using TypeScript / Angular along with Node.js / Express. This site and a few others are hosted on a Raspberry Pi web server in my home office. My interests also include playing and recording music, designing and building speakers, and caring for my growing collection of bonsai trees. I am passionate about everything I do, and always put in the effort required to get tasks done correctly.">
+  <meta property="og:image" content="http://www.ericeschelbach.com/images/thumbnail2.jpg">
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:description" content="Creative, highly motivated, self-taught Full Stack Web Developer with a strong work ethic and a natural passion for technology. Extremely detail oriented and thorough, with 3+ years of experience developing software to be robust and user friendly. Fast learner, punctual, reliable, and honest. Currently seeking a front-end or full-stack web developer position.">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="keywords" content="Eric Eschelbach Full Stack Web Developer Resume Seattle Washington Junior Front End" />
   <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
@@ -86,9 +87,8 @@
 					<ul class="top-links">
             <li><a href="https://github.com/spongah"><i class="fa fa-github"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/eric-eschelbach-719b09102/"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="https://www.facebook.com/eric.eschelbach"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="https://plus.google.com/u/0/+RockSolidStudios"><i class="fa fa-facebook"></i></a></li>
-
+            <li><a href="https://www.facebook.com/eric.eschelbach"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://plus.google.com/u/0/+RockSolidStudios"><i class="fa fa-google-plus"></i></a></li>
 					</ul>
 				</div>
 			</div>
@@ -96,38 +96,36 @@
     		<div class="banner-left-wthree">
     			<img src="images/banner-btm.jpg" alt=" " class="img-responsive">
     			<ul class="address">
-
-    					<li>
-    							<ul class="address-text">
-    								<li><b>NAME</b></li>
-    								<li>: Eric Eschelbach</li>
-    							</ul>
-    						</li>
-    						<li>
-    							<ul class="address-text">
-    								<li><b>D.O.B</b></li>
-    								<li>: 07-11-1981</li>
-    							</ul>
-    						</li>
-    						<li>
-    							<ul class="address-text">
-    								<li><b>ADDRESS </b></li>
-    								<li>: 1202 N 160TH ST  Seattle, WA 98133</li>
-    							</ul>
-    						</li>
-    						<li>
-    							<ul class="address-text">
-    								<li><b>E-MAIL </b></li>
-    								<li>: <a href="mailto:ericeschelbach@gmail.com">ericeschelbach@gmail.com</a></li>
-    							</ul>
-    						</li>
-
-    					</ul>
+  					<li>
+							<ul class="address-text">
+								<li><b>NAME</b></li>
+								<li>: Eric Eschelbach</li>
+							</ul>
+  					</li>
+						<li>
+							<ul class="address-text">
+								<li><b>AGE</b></li>
+								<li>: 36</li>
+							</ul>
+						</li>
+						<li>
+							<ul class="address-text">
+								<li><b>ADDRESS </b></li>
+								<li>: 1202 N 160TH ST  Seattle, WA 98133</li>
+							</ul>
+						</li>
+						<li>
+							<ul class="address-text">
+								<li><b>E-MAIL </b></li>
+								<li>: <a href="mailto:ericeschelbach@gmail.com">ericeschelbach@gmail.com</a></li>
+							</ul>
+						</li>
+					</ul>
     		</div>
-    		<div class="banner-right-w3-agileits">
+    		<!-- <div class="banner-right-w3-agileits">
     			<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Frocksolidsound801%2Fvideos%2F624438197656116%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
     		</div>
-    		<div class="clearfix"></div>
+    		<div class="clearfix"></div> -->
     	</div>
     </div>
 		<script>
@@ -147,9 +145,9 @@
   <div class="about" id="about">
   	<div class="container">
   	<!---728x90--->
-  		<span class="about-top-w3">Who I am?</span>
+  		<span class="about-top-w3">Who am I?</span>
   		<h4 class="title-w3ls">About Me</h4>
-  		<h5 class="sub">The brief introduction of myself</h5>
+  		<h5 class="sub">A Brief Introduction</h5>
   		<p class="para-w3-agile">Creative, highly motivated, self-taught Full Stack Web Developer with a strong work ethic and a natural passion for technology. Extremely detail oriented and thorough, with 3+ years of experience developing software to be robust and user friendly. Fast learner, punctual, reliable, and honest. Currently seeking a front-end or full-stack web developer position, utilizing the following transferrable skills and experience: </p>
   		<div class="skills-bar">
   		<!---728x90--->
@@ -158,12 +156,12 @@
   				<section class='wrap'>
   					<div class='wrap_right'>
   					  <div class='bar_group'>
-              <div class='bar_group__bar thin' label='JavaScript / TypeScript' show_values='true' tooltip='true' value='90'></div>
-  						<div class='bar_group__bar thin' label='AngularJS / Angular 2+' show_values='true' tooltip='true' value='80'></div>
-  						<div class='bar_group__bar thin' label='HTML5 / CSS3' show_values='true' tooltip='true' value='100'></div>
-  						<div class='bar_group__bar thin' label='jQuery' show_values='true' tooltip='true' value='70'></div>
-  						<div class='bar_group__bar thin' label='Ruby on Rails' show_values='true' tooltip='true' value='65'></div>
-  						</div>
+                <div class='bar_group__bar thin' label='HTML5 / CSS3' show_values='true' tooltip='true' value='100'></div>
+    						<div class='bar_group__bar thin' label='AngularJS / Angular 2+' show_values='true' tooltip='true' value='80'></div>
+                <div class='bar_group__bar thin' label='JavaScript ES6 / TypeScript 2' show_values='true' tooltip='true' value='90'></div>
+    						<div class='bar_group__bar thin' label='jQuery' show_values='true' tooltip='true' value='70'></div>
+                <div class='bar_group__bar thin' label='Ruby on Rails' show_values='true' tooltip='true' value='65'></div>
+              </div>
   					</div>
   					<div class='clear'></div>
   				</section>
@@ -184,9 +182,21 @@
   				</div>
   				<div class="col-md-6 work-right">
   					<h5><span class="glyphicon glyphicon-briefcase"> </span> PlanSource - EDI Analyst</h5>
-  					<li>As a PlanSource EDI Analyst I used proprietary software along with customized 3rd party software (834 Clearing House) to export and format protected health information into various file formats for hundreds of different insurance and payroll vendors. Automated file feeds were expected to be implemented on time and pass quality assurance validations. Problems that could arise include incorrect or missing data, special characters or other invalid data. Sometimes an entire file would fail because of a single character, so attention to all details was critical.</li>
-            <li>My first week, I created an audit tool for the manual processing team that could reduce a 2-3 hour audit to about 5 minutes! Later, I created a PDF converter with Javascript that would quickly convert a specific vendor’s poorly formatted error report and quickly convert it to a user friendly CSV file for analysis.</li>
-            <li>After about a year, I was added to an elite group of tech savvy analysts who worked together to solve the most difficult implementation issues as they would arise. I was able to refactor some coverage level logic, designed by our most senior analyst for our biggest client, into a much more efficient and readable function that is now being used in all new implementation templates.</li>
+              <br>As a PlanSource EDI Analyst I used proprietary software along with customized 3rd party software (834 Clearing House) to export and format protected health information into various file formats for hundreds of different insurance and payroll vendors. Automated file feeds were expected to be implemented on time and pass quality assurance validations. Problems that could arise include incorrect or missing data, special characters or other invalid data. Sometimes an entire file would fail because of a single character, so attention to all details was critical.
+              <br><br>
+              My first week, I created an audit tool for the manual processing team that could reduce a 2-3 hour audit to about 5 minutes! Later, I created a PDF converter with Javascript that would quickly convert a specific vendor’s poorly formatted error report and quickly convert it to a user friendly CSV file for analysis.
+              <br><br>
+              After about a year, I was added to an elite group of tech savvy analysts who worked together to solve the most difficult implementation issues as they would arise. I was able to refactor some coverage level logic, designed by our most senior analyst for our biggest client, into a much more efficient and readable function that is now being used in all new implementation templates.
+          </div>
+  				<div class="clearfix"> </div>
+  			</div>
+        <div class="work-info">
+  				<div class="col-md-6 work-right work-right2">
+  					<h4>2008 - 2016 </h4>
+  				</div>
+  				<div class="col-md-6 work-left work-left2">
+  					<h5> Self Employed <span class="glyphicon glyphicon-briefcase"> </span></h5>
+  					<p>Customized and hosted websites for my Recording Studio and Pro Audio business. Basic HTML, image editing, and linux operations. </p>
   				</div>
   				<div class="clearfix"> </div>
   			</div>
@@ -202,7 +212,7 @@
   				<div class="news-one-wthree-agile">
   					<div class="col-md-6 news-left">
   						        <div class="biseller-column">
-  										<a class="lightbox" href="#one">
+  										<a class="lightbox" href="https://markco1.herokuapp.com/">
   											<img src="images/p1.jpg" alt=""/>
   										</a>
   										<div class="lightbox-target" id="one">
@@ -217,19 +227,19 @@
 
   					</div>
   					<div class="col-md-6 news-right">
-  					<a href="#one"><h4>Markco Beta</h4></a>
+  					<a href="https://markco1.herokuapp.com/"><h4>Markco Beta</h4></a>
   						<p class="para-w3-agile">Mobile-first web app that allows groups of people to track each others location in real time. Uses HTML5 geolocation and Google Maps API along with Ruby on Rails and JavaScript to create a simple, effective user experience. This was my first attempt at a serious web app.</p>
   					</div>
   					<div class="clearfix"> </div>
   				</div>
   				<div class="news-one-wthree-agile">
   					<div class="col-md-6 news-right">
-  						<a href="#three"><h4>Real Time Analyzer</h4></a>
+  						<a href="https://rta3.herokuapp.com/"><h4>Real Time Analyzer</h4></a>
   						<p class="para-w3-agile">Sleek, customizable RTA tool in a responsive browser based app. Uses "P5.sound" JavaScript library to access mic input and perform frequency analysis (via Fast Fourier transform). Perfect for ringing out feedback in a PA system! (Does not currently work with mobile devices)</p>
   					</div>
   					<div class="col-md-6 news-left">
   						 <div class="biseller-column">
-  										<a class="lightbox" href="#three">
+  										<a class="lightbox" href="https://rta3.herokuapp.com/">
   											<img src="images/p2.jpg" alt=""/>
   										</a>
   										<div class="lightbox-target" id="three">
@@ -247,12 +257,12 @@
   			  <div class="news-one-wthree-agile">
   					<div class="col-md-6 news-left">
   							<div class="biseller-column">
-  										<a class="lightbox" href="#two">
+  										<a class="lightbox" href="https://soundtools2.herokuapp.com/">
   											<img src="images/p3.jpg" alt=""/>
   										</a>
   										<div class="lightbox-target" id="two">
   										 <img src="images/p3.jpg" alt=""/>
-  										 <p class="pop">Responsive audio tool designed to calculate custom tuning. Many musicians prefer to tune their recordings to a 432hz A4 instead of the standard 440hz because they feel it holds a more mystical connection to the universe, hence the name "Chakra Tuner". This was my first Angular 2 project, and was designed to be part of a bigger collection of audio tools.</p>
+  										 <p class="pop">Responsive audio tool designed to calculate custom tuning. Many musicians prefer to tune their recordings to a <a href="http://www.collective-evolution.com/2013/12/21/heres-why-you-should-convert-your-music-to-432hz/">432hz A4</a> instead of the standard 440hz because they feel it holds a more mystical connection to the universe, hence the name "Chakra Tuner". This was my first Angular 2 project, and was designed to be part of a bigger collection of audio tools.</p>
   										   <a class="lightbox-close" href="#"> </a>
 
   											<div class="clearfix"> </div>
@@ -261,19 +271,19 @@
 
   					</div>
   					<div class="col-md-6 news-right">
-  					<a href="#two"><h4>Chakra Tuner</h4></a>
-  						<p class="para-w3-agile">Responsive audio tool designed to calculate custom tuning frequencies. Many musicians prefer to tune their recordings to a 432hz A4 instead of the standard 440hz because they feel it holds a more mystical connection to the universe, hence the name "Chakra Tuner".</p>
+  					<a href="https://soundtools2.herokuapp.com/"><h4>Chakra Tuner</h4></a>
+  						<p class="para-w3-agile">Responsive audio tool designed to calculate custom tuning frequencies. Many musicians prefer to tune their recordings to a <a href="http://www.collective-evolution.com/2013/12/21/heres-why-you-should-convert-your-music-to-432hz/">432hz A4</a> instead of the standard 440hz because they feel it holds a more mystical connection to the universe, hence the name "Chakra Tuner".</p>
   					</div>
   					<div class="clearfix"> </div>
   				</div>
   				<div class="news-one-wthree-agile">
   					<div class="col-md-6 news-right">
-  						<a href="#four"><h4>Frequency Trainer</h4></a>
+  						<a href="https://freqtrainer.herokuapp.com/"><h4>Frequency Trainer</h4></a>
   						<p class="para-w3-agile">Simple game that plays a tone then asks the player to guess the frequency that they heard. Designed to help audio engineers train their ears by learning to recognize the frequencies that usually feedback in a music venue.</p>
   					</div>
   					<div class="col-md-6 news-left">
   						 <div class="biseller-column">
-  										<a class="lightbox" href="#four">
+  										<a class="lightbox" href="https://freqtrainer.herokuapp.com/">
   											<img src="images/p4.jpg" alt=""/>
   										</a>
   										<div class="lightbox-target" id="four">
@@ -291,7 +301,7 @@
   				 <div class="news-one-wthree-agile">
   					<div class="col-md-6 news-left">
   							<div class="biseller-column">
-  										<a class="lightbox" href="#five">
+  										<a class="lightbox" href="https://mudkraft.herokuapp.com/">
   											<img src="images/p5.jpg" alt=""/>
   										</a>
   										<div class="lightbox-target" id="five">
@@ -305,7 +315,7 @@
 
   					</div>
   					<div class="col-md-6 news-right">
-  					<a href="#five"><h4>MUDCraft</h4></a>
+  					<a href="https://mudkraft.herokuapp.com/"><h4>MUDCraft</h4></a>
   						<p class="para-w3-agile">Experimenting with a web-based text adventure game, mixed with a little Minecraft. This game allows digging and walking through randomly generated maps in 3 dimensions! I made this to try React.js, but ended up mostly using plain Javascript paired with a Rails back end.</p>
   					</div>
   					<div class="clearfix"> </div>
@@ -321,12 +331,12 @@
   	<span class="about-top-w3">Send me a message</span>
   		<h4 class="title-w3ls">Contact Me</h4>
   		<div class="col-md-5 contact-agileits-w3layouts">
-  		<form action="#" method="post">
-  				<input type="text" name="Your Name" placeholder="Name" required="" />
-  				<input type="email" name="Your Email" placeholder="Email" required="" />
-  				<input type="text" Name="Phone Number" placeholder="Number" required=""/>
-  				<textarea name="Message" placeholder="Message" required=""></textarea>
-  				<input type="submit" value="Submit">
+  		  <form action="php/contact.php" method="POST">
+  				<input type="text" name="name" placeholder="Name" required="" />
+  				<input type="email" name="email" placeholder="Email" required="" />
+  				<input type="text" name="number" placeholder="Number" required=""/>
+  				<textarea name="msg" placeholder="Message" required=""></textarea>
+  				<input type="submit" value="SEND">
   			</form>
   			<h5 class="sub">Contact Information:</h5>
   			<p><span>Location</span> : 1202 N 160TH ST  Seattle, WA 98133</p>
@@ -339,7 +349,7 @@
   		<div id="map"></div>
 
   			<!-- Map-JavaScript -->
-  			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+  			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFBkx1lc_ksD3xfkgpUWeE_DOK-FVbeZA"></script>
   			<script type="text/javascript">
   				google.maps.event.addDomListener(window, 'load', init);
   				function init() {
